# qurator_v2

./: .cursorignore  .gitignore  README.md  package-lock.json  package.json
back-end/: README.md  config.yaml  pyproject.toml  repo2txt_local.py  requirements.txt
back-end/scripts/: generate_api_key.py
back-end/src/cardnews/: main.py
back-end/src/cardnews/core/: db.py  security.py  settings.py
back-end/src/cardnews/routers/: cardnews.py  health.py
back-end/src/cardnews/scraping/: parsers.py  proxy_client.py  utils.py
back-end/src/cardnews/services/: cardnews_service.py
back-end/src/cardnews/workers/: agent_runner.py  instructions.py
front-end/: .gitignore  README.md  directory_concatenate.py  merged_code.txt  package-lock.json  package.json  tailwind.config.ts
front-end/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
front-end/src/app/api/: api.ts
front-end/src/app/content/: page.tsx
front-end/src/components/: content-card.tsx  content-downloader.tsx  content-grid.tsx  editor.tsx  skeleton-loading.tsx  topic-input.tsx  topic-search-bar.tsx
front-end/src/components/editor/: image-selection-grid.tsx
front-end/src/components/ui/: button.tsx  input.tsx  logo.tsx  side-panel.tsx
front-end/src/hooks/: useGenerateContent.ts
front-end/src/lib/: fonts.ts
